--- a/index.html
+++ b/index.html
@@ -96,6 +96,33 @@
       </div>
     </a>
 
+    <!-- Project 02 -->
+    <a 
+  href="https://your-fairlens-project-link.com" 
+  target="_blank" 
+  rel="noopener noreferrer"
+  class="block"
+>
+  <div class="project-item border-b border-white/10 pb-8 group transition-all duration-300 cursor-pointer">
+    
+    <span class="text-xs uppercase tracking-widest text-indigo-500 font-semibold opacity-70 group-hover:opacity-100 transition-opacity">
+      Visit the Project →
+    </span>
+
+    <div class="flex justify-between items-start mt-2">
+      <h3 class="text-4xl font-bold group-hover:text-indigo-400 transition-colors">
+        FairLens – AI Decision Ethics Visualizer
+      </h3>
+      <span class="text-xl font-bold italic text-indigo-500">01</span>
+    </div>
+
+    <p class="mt-4 text-slate-400 text-sm max-w-2xl leading-relaxed group-hover:text-slate-200 transition-colors">
+      Built an explainable AI system that predicts loan approval probabilities while analyzing fairness and bias across demographic groups. Focused on transparency, accountability, and real-world ethical AI decision-making using Python, machine learning, and a Flask-based backend.
+    </p>
+
+  </div>
+</a>
+
     <!-- Project 03 -->
     <a 
       href="    https://gdp-dashboard   -template.streamlit.app/" 
@@ -133,6 +160,12 @@
                     <p class="text-slate-500 mb-2">February-2025</p>
                     <p class="text-slate-400 text-sm max-w-2xl">An AI ML internship focuses on building intelligent systems that learn and make decisions on their own.</p>
                 </div>
+                <div class="border-l-2 border-slate-700 pl-8">
+                    <h3 class="text-3xl font-bold">AI Intern | CodeClause</h3>
+                    <p class="text-slate-500 mb-2">INTERNSHIP PROJECT</p>
+                    <p class="text-slate-400 text-sm max-w-2xl">Facial Recognition System using OpenCV and TensorFlow for real-time identification.</p>
+                </div>
+            </div>
         </section>
 
         <section id="simulations">
@@ -289,11 +322,21 @@
         camera.position.z = 3;
 
         function animate() {
-            requestAnimationFrame(animate);
-            particlesMesh.rotation.y += 0.0015;
-            renderer.render(scene, camera);
-        }
-        animate();
+  requestAnimationFrame(animate);
+
+  particlesMesh.rotation.y += 0.0008;
+  particlesMesh.rotation.x += 0.0004;
+
+  const positions = particlesGeometry.attributes.position.array;
+  for (let i = 2; i < positions.length; i += 3) {
+    positions[i] += 0.002;
+    if (positions[i] > 5) positions[i] = -5;
+  }
+  particlesGeometry.attributes.position.needsUpdate = true;
+
+  renderer.render(scene, camera);
+}
+
 
         // --- 2. GSAP REVEAL ANIMATIONS ---
         gsap.registerPlugin(ScrollTrigger);
@@ -403,5 +446,4 @@ window.addEventListener('load', () => moveIndicator(document.querySelector('.act
   }
     </script>
 </body>
-
 </html>
